stopped it from shifting other cards

--- a/src/components/App/GalleryItem/GalleryItem.css
+++ b/src/components/App/GalleryItem/GalleryItem.css
@@ -7,8 +7,9 @@
 }
 
 .card {
-    height: 100px;
-    width: 100px;
+    vertical-align: top;
+    height: 200px;
+    width: 200px;
     display: inline-block;
     margin: 10px;
 }
